// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot with a path that includes account 1`] = `
<header
  className="main-header"
>
  <section
    className="zip-code-section"
  />
  <h1
    className="header-title"
  >
    Market 2 Table
  </h1>
  <Link
    className="link-to-vendors"
    to="/"
  >
    <button
      className="vendor-login-button"
      onClick={[Function]}
    >
      Home
    </button>
  </Link>
</header>
`;

exports[`Header should match the snapshot with a path that includes markets 1`] = `
<header
  className="main-header"
>
  <section
    className="zip-code-section"
  >
    <p
      className="zip-code-par"
    >
      Zip Code: 
      80401
    </p>
    <button
      className="back-button"
      id="back-to-markets-button"
      onClick={[Function]}
    >
      Back To Markets
    </button>
  </section>
  <h1
    className="header-title"
  >
    Market 2 Table
  </h1>
  <Link
    className="link-to-vendors"
    to="/vendor/account"
  >
    <button
      className="vendor-login-button"
      onClick={[Function]}
    >
      Vendor Login
    </button>
  </Link>
</header>
`;

exports[`Header should match the snapshot with a path that includes markets and vendors 1`] = `
<header
  className="main-header"
>
  <section
    className="zip-code-section"
  >
    <p
      className="zip-code-par"
    >
      Zip Code: 
      80401
    </p>
    <button
      className="back-button"
      id="back-to-market-button"
      onClick={[Function]}
    >
      Back to Market
    </button>
  </section>
  <h1
    className="header-title"
  >
    Market 2 Table
  </h1>
  <Link
    className="link-to-vendors"
    to="/vendor/account"
  >
    <button
      className="vendor-login-button"
      onClick={[Function]}
    >
      Vendor Login
    </button>
  </Link>
</header>
`;
